ensure top alignment for argument names

--- a/src/cpp/session/resources/R.css
+++ b/src/cpp/session/resources/R.css
@@ -125,7 +125,8 @@ table p {
    margin-bottom: 6px;
 }
 
-table[summary="R argblock"] tr td:first-child {
+h3.R-Arguments + table tr td:first-child {
+   vertical-align: top;
    min-width: 24px;
    padding-right: 12px;
 }
